yaml/server-side/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-side
spec:
  template:
    metadata:
      labels:
        app: server-side
    spec:
      containers:
        - name: server-side
          image: localhost:5000/server:1.1
          imagePullPolicy: Never
          ports: 
            - containerPort: 5000
  selector:
    matchLabels:
      app: server-side
