yaml/server-side/server-rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-rabbitmq
spec:
  template:
    metadata:
      labels:
        app: server-rabbitmq
    spec:
      containers:
        - name: server-rabbitmq
          image: localhost:5000/server:1.1
          command: 
            - "sh"
            - "-c"
            - "celery -A main.celery worker --pool=eventlet"
          imagePullPolicy: Never
          ports: 
            - containerPort: 5001
  selector:
    matchLabels:
      app: server-rabbitmq
