yaml/server-side/server-rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-rabbitmq
spec:
  type: ClusterIP
  ports:
    - name: server-rabbitmq
      protocol: TCP
      port: 5001
  selector: 
    app: server-rabbitmq
