yaml/server-side/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-side
spec:
  type: ClusterIP
  ports:
    - name: server-side
      protocol: TCP
      port: 5000
  selector: 
    app: server-side
